primo-brands-hydration-demo/salesforce/force-app/main/default/objects/Browse_Session__c/Browse_Session__c.object-meta.xml
<CustomObject>
    <label>Browse Session</label>
    <nameField>
        <displayFormat>BS-{0000}</displayFormat>
        <label>Browse Session Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Browse Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>