primo-brands-hydration-demo/salesforce/force-app/main/default/objects/Browse_Session__c/fields/Categories_Browsed__c.field-meta.xml
<CustomField>
    <fullName>Categories_Browsed__c</fullName>
    <label>Categories Browsed</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>