primo-brands-hydration-demo/salesforce/force-app/main/default/objects/Browse_Session__c/fields/Device__c.field-meta.xml
<CustomField>
    <fullName>Device__c</fullName>
    <label>Device</label>
    <length>100</length>
    <type>Text</type>
</CustomField>