primo-brands-hydration-demo/salesforce/force-app/main/default/objects/Browse_Session__c/fields/Products_Viewed__c.field-meta.xml
<CustomField>
    <fullName>Products_Viewed__c</fullName>
    <label>Products Viewed</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>